--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.mail.properties..mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.devtools.add-properties=false
+spring.main.allow-circular-references = true
