--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.devtools.add-properties=false
 spring.main.allow-circular-references = true
+
+spring.thymeleaf.cache=false
