--- a/pom.xml
+++ b/pom.xml
@@ -64,10 +64,25 @@
       <scope>test</scope>
     </dependency> -->
 	<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.16.0</version> <!-- Use the latest version available -->
+</dependency>
+	<dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <optional>true</optional>
     </dependency>
+	<dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-thymeleaf</artifactId>
+    </dependency><!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-jasper -->
+<!-- <dependency>
+    <groupId>org.apache.tomcat</groupId>
+    <artifactId>tomcat-jasper</artifactId>
+    <version>11.0.0-M14</version>
+</dependency> -->
+
   </dependencies>
 
 	<build>
