--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.data.mongodb.uri=mongodb+srv://dhineshkumarcse2020:Dhinesh637483@cluster0
 # mail properties
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=dhandapanisakthi123@gmail.com
-spring.mail.password=npsrrfreonzdfftf
+spring.mail.username=heart.api.service@gmail.com
+spring.mail.password=xxvszcstsyrlbxzm
 spring.mail.properties..mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
